Added new assets for the Source control test

--- a/Explore/A_RT/.A_RT.Project.json
+++ b/Explore/A_RT/.A_RT.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "cyCsxBoWusobRJB4u9droI",
+    "id" : "hUSPV1xVg61k07fwgd12sT",
     "name" : "A_RT",
     "type" : "Project",
     "metadata" : {
