--- a/Explore/RR_1/.RR_1.Project.json
+++ b/Explore/RR_1/.RR_1.Project.json
@@ -1,7 +1,7 @@
 {
   "objectInfo" : {
     "id" : "4hO9DE2Q4koiM5YX1vDlkT",
-    "name" : "RR",
+    "name" : "RR_1",
     "type" : "Project",
     "metadata" : {
       "modelVersion" : {
